adding ability to delete decks and refactor code.

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -19,6 +19,7 @@ body {
 }
 
 .decks li {
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -30,8 +31,13 @@ body {
   cursor: pointer;
 }
 
-.decks li:hover {
-  background-color: white;
+.decks li button {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  font-size: 10px;
+  width: 10px;
+  height: 10px;
 }
 
 form {
